[metadata]
name = AlbertUnruhUtils
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = find:
install_requires =
    redis~=3.5.3
    aioredis~=2.0.1
