[metadata]
name = AlbertUnruhUtils.py
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed
keywords = albert unruh utils configuration ratelimiting sync async logging version
project_urls =
    Read The Docs = https://AlbertUnruhUtilsPy.readthedocs.io
    Issue Tracker = https://github.com/AlbertUnruh/AlbertUnruhUtils.py/issues
    Source Code = https://github.com/AlbertUnruh/AlbertUnruhUtils.py

[options]
packages = find:
python_requires = >= 3.9
